# reliakit

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.id.md  README.md  RELEASING.md  SECURITY.md  _typos.toml  codecov.yml  deny.toml
.claude/commands/: review-rust.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: actionlint.yml  audit.yml  auto-publish.yml  changelog.yml  ci.yml  coverage.yml  docs.yml  feature-powerset.yml  fuzz.yml  mutants.yml  publish-dry-run.yml  publish.yml  release.yml  scorecard.yml  typos.yml  verified-commits.yml
assets/: README.md
benches/: Cargo.toml  serialization.rs
crates/reliakit/: CHANGELOG.md  Cargo.toml  README.md
crates/reliakit-backoff/: Cargo.toml  README.md
crates/reliakit-backoff/examples/: basic.rs
crates/reliakit-backoff/src/: jitter.rs  lib.rs
crates/reliakit-bulkhead/: README.md
crates/reliakit-bulkhead/src/: lib.rs
crates/reliakit-circuit/: Cargo.toml  README.md
crates/reliakit-circuit/examples/: basic.rs
crates/reliakit-circuit/src/: lib.rs  rolling.rs  test_utils.rs
crates/reliakit-codec/: Cargo.toml  README.md
crates/reliakit-codec/examples/: basic_encoding.rs  protocol_message.rs
crates/reliakit-codec/src/: decode.rs  encode.rs  error.rs  format.rs  helpers.rs  impls.rs  lib.rs  primitives.rs
crates/reliakit-collections/: Cargo.toml  README.md
crates/reliakit-collections/examples/: basic.rs
crates/reliakit-collections/src/: bounded_map.rs  bounded_set.rs  bounded_vec.rs  error.rs  lib.rs  ring_buffer.rs
crates/reliakit-core/: Cargo.toml  README.md
crates/reliakit-core/examples/: basic.rs
crates/reliakit-core/src/: lib.rs
crates/reliakit-csv/: Cargo.toml  README.md
crates/reliakit-csv/examples/: basic.rs
crates/reliakit-csv/src/: error.rs  field.rs  lib.rs  limits.rs  reader.rs  record.rs  writer.rs
crates/reliakit-csv/tests/: api.rs  format.rs
crates/reliakit-decide/: Cargo.toml  DESIGN.md  README.md
crates/reliakit-decide/examples/: agent_brain.rs
crates/reliakit-decide/src/: lib.rs
crates/reliakit-derive/: Cargo.toml  README.md
crates/reliakit-derive/examples/: protocol.rs
crates/reliakit-derive/src/: lib.rs
crates/reliakit-derive/tests/: compile_fail.rs  csv.rs  derive.rs  json.rs
crates/reliakit-health/: Cargo.toml  README.md
crates/reliakit-health/examples/: basic.rs
crates/reliakit-health/src/: check.rs  health.rs  lib.rs  report.rs
crates/reliakit-json/: Cargo.toml  README.md
crates/reliakit-json/examples/: basic.rs
crates/reliakit-json/src/: canonical.rs  decode.rs  encode.rs  error.rs  form.rs  lib.rs  limits.rs  number.rs  parse.rs  primitives.rs  value.rs  write.rs
crates/reliakit-primitives/: Cargo.toml  README.md
crates/reliakit-primitives/examples/: primitives_basic.rs
crates/reliakit-primitives/src/: bounded.rs  duration.rs  error.rs  lib.rs  mac.rs  net.rs  non_empty.rs  numeric.rs  semver.rs  text.rs  uuid.rs
crates/reliakit-ratelimit/: Cargo.toml  README.md
crates/reliakit-ratelimit/examples/: basic.rs
crates/reliakit-ratelimit/src/: lib.rs
crates/reliakit-retry/: Cargo.toml  README.md
crates/reliakit-retry/examples/: async_retry.rs  basic_retry.rs
crates/reliakit-retry/src/: error.rs  lib.rs  policy.rs  retry.rs
crates/reliakit-retry/tests/: behavior.rs
crates/reliakit-secret/: Cargo.toml  README.md
crates/reliakit-secret/src/: lib.rs
crates/reliakit-timeout/: Cargo.toml  README.md
crates/reliakit-timeout/examples/: basic.rs
crates/reliakit-timeout/src/: lib.rs
crates/reliakit-validate/: Cargo.toml  README.md
crates/reliakit-validate/examples/: basic.rs
crates/reliakit-validate/src/: error.rs  lib.rs  valid.rs
crates/reliakit/examples/: config_check.rs  embedded_no_std.rs  resilient_client.rs  typed_csv.rs  typed_json.rs
crates/reliakit/src/: lib.rs
crates/reliakit/tests/: derive_umbrella.rs
docs/cookbook/: README.md  bound-a-buffer.md  circuit-breaker-for-flaky-service.md  csv-import-with-limits.md  deterministic-codec-for-signing.md  graded-explainable-decision.md  health-check-endpoint.md  limit-concurrency-with-a-bulkhead.md  rate-limit-a-worker.md  redact-secrets-in-logs.md  retry-with-backoff.md  strict-json-boundary.md  timeout-operation.md  validate-input-at-the-boundary.md
docs/rfcs/: reliakit-json.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: codec_decode.rs  json_canonical.rs  json_parse.rs  json_roundtrip.rs
