[workspace]
members = [
    "crates/reliakit-primitives",
    "crates/reliakit-secret",
    "crates/reliakit-validate",
    "crates/reliakit-collections",
    "crates/reliakit-codec",
    "crates/reliakit-csv",
    "crates/reliakit-backoff",
    "crates/reliakit-retry",
    "crates/reliakit-bulkhead",
    "crates/reliakit-circuit",
    "crates/reliakit-health",
    "crates/reliakit-ratelimit",
    "crates/reliakit-json",
    "crates/reliakit-timeout",
    "crates/reliakit-core",
    "crates/reliakit-derive",
    "crates/reliakit-decide",
    "crates/reliakit",
    "benches",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/satyakwok/reliakit"
homepage = "https://satyakwok.dev/projects/reliakit"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
