[package]
name = "reliakit-backoff"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Clock-agnostic retry backoff policies (exponential, linear, constant) with jitter helpers. no_std and zero-dependency."
keywords = ["backoff", "retry", "reliability", "exponential", "no-std"]
categories = ["algorithms", "no-std", "rust-patterns"]

[dependencies]

[[example]]
name = "basic"
path = "examples/basic.rs"

[lints]
workspace = true
