[package]
name = "reliakit-collections"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Bounded and reliability-oriented collection types for Rust."
keywords = ["collections", "bounded", "vec", "constraints", "no-std"]
categories = ["data-structures", "rust-patterns", "no-std"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[lints]
workspace = true
