[package]
name = "reliakit-json"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Strict, bounded, and deterministic JSON for reliability-sensitive Rust. no_std + alloc, zero-dependency."
keywords = ["json", "strict", "no-std", "deterministic", "reliability"]
categories = ["parser-implementations", "encoding", "no-std"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []
# Experimental RFC 8785 (JCS) canonical serialization. Off by default until it
# is validated against the conformance vectors; the API may change.
canonical = []

[dependencies]

[[example]]
name = "json_basic"
path = "examples/basic.rs"

[lints]
workspace = true
